# onyx

./: AUDIT.md  Audit.md  CLAUDE.md  PLAN.md  README.md
.claude/: settings.json
apps/tauri/: index.html  package-lock.json  package.json  vite.config.ts
apps/tauri/src/: App.svelte  app.css
apps/tauri/src-tauri/: Cargo.toml
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: lib.rs
apps/tauri/src/lib/: dateFormat.ts  grouping.test.ts  grouping.ts  paths.test.ts  paths.ts  types.ts
apps/tauri/src/lib/components/: BottomSheet.svelte  ConfirmDialog.svelte  ConfirmDialog.test.ts  DateTimePicker.svelte  DateTimePicker.test.ts  NewTaskInput.svelte  TaskDetailView.svelte  TaskItem.svelte
apps/tauri/src/lib/screens/: SettingsScreen.svelte  SetupScreen.svelte  TasksScreen.svelte
apps/tauri/src/lib/stores/: app.svelte.ts
apps/tauri/tauri-plugin-credentials/: Cargo.toml  build.rs
apps/tauri/tauri-plugin-credentials/android/: build.gradle.kts
apps/tauri/tauri-plugin-credentials/android/src/main/java/app/tauri/credentials/: CredentialPlugin.kt
apps/tauri/tauri-plugin-credentials/permissions/autogenerated/: reference.md
apps/tauri/tauri-plugin-credentials/permissions/schemas/: schema.json
apps/tauri/tauri-plugin-credentials/src/: lib.rs
crates/onyx-cli/src/: main.rs
crates/onyx-cli/src/commands/: group.rs  init.rs  list.rs  mod.rs  sync.rs  task.rs  workspace.rs
crates/onyx-core/: Cargo.toml
crates/onyx-core/src/: config.rs  error.rs  google_tasks.rs  lib.rs  models.rs  repository.rs  storage.rs  sync.rs  webdav.rs
docs/: API.md  DEVELOPMENT.md
