[package]
name = "onyx-core"
version = "0.1.0"
edition = "2021"
description = "Core library for local-first task management with markdown storage and WebDAV sync"
license = "GPL-3.0-or-later"
repository = "https://github.com/SteelDynamite/onyx"

[features]
default = ["keyring-storage"]
keyring-storage = ["keyring"]

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { workspace = true, features = ["v5"] }
chrono = { workspace = true }
directories = "5.0"
reqwest = { workspace = true, features = ["json"] }
sha2 = { workspace = true }
quick-xml = { workspace = true }
tokio = { workspace = true }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"], optional = true }
zeroize = "1"
log = "0.4"

[dev-dependencies]
tempfile = "3.0"
wiremock = "0.6"
tokio = { workspace = true }
