[package]
name = "tauri-plugin-credentials"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-credentials"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"], optional = true }

[features]
default = ["desktop"]
desktop = ["keyring"]
